<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/StorageItemList_Search"
        android:title="@string/App_Search"
        android:icon="@drawable/search_24px"
        app:iconTint="@color/Application_ActionBar_TextColor"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />

    <item android:id="@+id/StorageItemList_Sort"
        android:icon="@drawable/sort_24px"
        android:title="@string/StorageItemList_Menu_Sort"
        app:showAsAction="always" />

    <item android:id="@+id/StorageItemList_Add"
        android:title="@string/StorageItemList_Menu_Add"
        android:icon="@drawable/add_circle_24px"
        app:iconTint="@color/Application_ActionBar_TextColor"
        app:showAsAction="always" />

    <item android:id="@+id/ArticleList_Menu_Share"
        android:title="@string/App_Share"
        android:icon="@drawable/share_24px"
        app:iconTint="@color/Application_ActionBar_TextColor"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/StorageItemList_Delete"
        android:title="@string/StorageItemList_Menu_Delete"
        app:showAsAction="ifRoom" />

</menu>