<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@drawable/app_background">

    <LinearLayout
        android:id="@+id/Main_LinearLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/Main_Text"
            android:tag="ExpiryDateOnly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:text="@string/Main_DemnaechstZuVerbrauchen" />

        <TextView
            android:id="@+id/Main_Text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:tag="ExpiryDateOnly"
            android:text="17 Artikal nach dem Ablaufdatum"
            android:textColor="#FD0000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/Main_Text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:tag="ExpiryDateOnly"
            android:text="2 Artikal demnächst verbrauchen"
            android:textColor="#1025F4"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/Main_TextInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:visibility="gone"
            android:tag="ExpiryDateOnly"
            android:text="Neue App Version"
            android:textSize="20sp" />


        <Button
            android:id="@+id/MainButton_Kategorie"
            android:text="@string/Main_Button_BestandNachKategorie"
            android:drawableLeft="@drawable/main_button_storage_grouped"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textAlignment="viewStart"
            android:backgroundTint="@color/MainButton_Color" />

        <Button
            android:id="@+id/MainButton_Lagerbestand"
            android:text="@string/Main_Button_Lagerbestand"
            android:drawableLeft="@drawable/main_button_storage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textAlignment="viewStart"
            android:backgroundTint="@color/MainButton_Color" />

        <Button
            android:id="@+id/MainButton_Artikeldaten"
            android:text="@string/Main_Button_ArtikelListe"
            android:drawableLeft="@drawable/main_button_article"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textAlignment="viewStart"
            android:backgroundTint="@color/MainButton_Color" />

        <Button
            android:id="@+id/MainButton_Barcode"
            android:text="@string/Main_Button_ArtikelScannen"
            android:drawableLeft="@drawable/main_button_barcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textAlignment="viewStart"
            android:backgroundTint="@color/MainButton_Color" />

        <Button
            android:id="@+id/MainButton_ShoppingList"
            android:text="@string/Main_Button_Einkaufsliste"
            android:drawableLeft ="@drawable/main_button_shopping_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textAlignment="viewStart"
            android:backgroundTint="@color/MainButton_Color" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>